Incomplete - # 3451: Error en el traspaso de albaranes a factura http://trac.esferalia.net/trac/aon/ticket/3451